qcacld-3.0: Add IPA_WDI3_TX_TWO_PIPES macro
IPA_WDI3_TX_TWO_PIPES is added to enable two TX pipes
configuration for IPA WDI 3.0 interfaces.

Enable IPA_WDI3_TX_TWO_PIPES on sdxprairie platform.

Change-Id: I34fe0af56b169ebad9d7bb29b38838dd44503736
CRs-Fixed: 2750082

--- a/configs/default_defconfig
+++ b/configs/default_defconfig
@@ -633,6 +633,7 @@ endif
 ifeq ($(CONFIG_ARCH_SDXPRAIRIE), y)
 ifeq ($(CONFIG_IPA_OFFLOAD), y)
 CONFIG_ENABLE_SMMU_S1_TRANSLATION := y
+CONFIG_IPA_WDI3_TX_TWO_PIPES := y
 endif
 endif
 
