qcacld-3.0: Add feature to enable generic shadow reg write
Add feature GENERIC_SHADOW_REGISTER_ACCESS_ENABLE to enable
shadow reg write for generic shadow registers.
This is enabled only for HSP.

Change-Id: I90302aa050baa9128313dbaf0c4ab57e426289b3
CRs-Fixed: 2794917

--- a/configs/qca6390_defconfig
+++ b/configs/qca6390_defconfig
@@ -797,3 +797,4 @@ CONFIG_SAP_DHCP_FW_IND := y
 #Enable FW Offload
 CONFIG_WLAN_FW_OFFLOAD := y
 
+CONFIG_GENERIC_SHADOW_REGISTER_ACCESS_ENABLE := y
