--- a/configs/default_defconfig
+++ b/configs/default_defconfig
@@ -490,6 +490,7 @@ ifneq ($(CONFIG_ARCH_SDXPRAIRIE), y)
 CONFIG_FEATURE_WLAN_STA_AP_MODE_DFS_DISABLE := y
 endif
 CONFIG_FEATURE_AP_MCC_CH_AVOIDANCE := y
+CONFIG_FEATURE_STA_MODE_VOTE_LINK := y
 else
 CONFIG_QCOM_ESE := y
 CONFIG_QCA_IBSS_SUPPORT := y
