qcacld-3.0: Enable CONFIG_HIF_CPU_PERF_AFFINE_MASK for Genoa PCIE
Enable CONFIG_HIF_CPU_PERF_AFFINE_MASK for Genoa PCIE to enable CPU perf
affine feature.

Change-Id: Ic3eb3ea092a265c98f10a4801ec74d17c06d8298
CRs-Fixed: 2839728

--- a/configs/genoa.pci.debug_defconfig
+++ b/configs/genoa.pci.debug_defconfig
@@ -66,6 +66,7 @@ CONFIG_DEBUG_RX_RING_BUFFER := y
 CONFIG_WLAN_OBJMGR_DEBUG:= y
 CONFIG_FEATURE_UNIT_TEST_SUSPEND := y
 CONFIG_LEAK_DETECTION := y
+CONFIG_HIF_CPU_PERF_AFFINE_MASK := y
 endif
 
 # Genoa features vs Rome PCIe
