qcacld-3.0: Enable device force wake recipe in driver
Enable force wake recipe feature DEVICE_FORCE_WAKE_ENABLE
and disable the generic shadow register write feature
GENERIC_SHADOW_REGISTER_ACCESS_ENABLE.
Enable feature  HIF_REG_WINDOW_SUPPORT to enable the
windowed register read/write from HIF layer.

Change-Id: Ic19d80b686639eb12a2e0a7c0ebf991740a576e7
CRs-Fixed: 2850592

--- a/configs/qca6390_defconfig
+++ b/configs/qca6390_defconfig
@@ -798,3 +798,5 @@ CONFIG_SAP_DHCP_FW_IND := y
 CONFIG_WLAN_FW_OFFLOAD := y
 
 CONFIG_GENERIC_SHADOW_REGISTER_ACCESS_ENABLE := y
+CONFIG_DEVICE_FORCE_WAKE_ENABLE :=y
+CONFIG_HIF_REG_WINDOW_SUPPORT :=y
