qcacld-3.0: enable MBSSID feature  for qca6390
added CONFIG_WLAN_FEATURE_MBSSID := y to enable MBSSID feature.

Change-Id: I43a1a1fca771fa159ab3bfcfb5ee34ac1d11da9e
CRs-Fixed: 2842583

--- a/configs/qca6390_defconfig
+++ b/configs/qca6390_defconfig
@@ -14,6 +14,7 @@ ifeq ($(CONFIG_CNSS_QCA6390), y)
 	CONFIG_SCALE_INCLUDES := y
 	CONFIG_MORE_TX_DESC := y
 	CONFIG_FW_THERMAL_THROTTLE := y
+	CONFIG_WLAN_FEATURE_MBSSID := y
 endif
 
 ifeq ($(CONFIG_ENABLE_IPA), y)
